タスク名での検索機能の追加

--- a/config/locales/model.yml
+++ b/config/locales/model.yml
@@ -4,9 +4,10 @@ ja:
       blog: ブログ
       user: ユーザー
     attributes:
-      blog:
+      task:
         title: タイトル
         content: 内容
+        limit: 終了期限
       user:
         title: タイトル
         name: 名前
