enumエラーの解消

--- a/config/locales/model.yml
+++ b/config/locales/model.yml
@@ -8,6 +8,7 @@ ja:
         title: タイトル
         content: 内容
         limit: 終了期限
+        priority: タスク優先度
       user:
         title: タイトル
         name: 名前
