--- a/config/locales/model.yml
+++ b/config/locales/model.yml
@@ -9,6 +9,13 @@ ja:
         content: タスク内容
         limit: タスク終了期限
         priority: タスク優先度
+          high: 高
+          middle: 中
+          low: 低
+        status:
+          not_started_yet: 未着手
+          started: 着手
+          completed: 完了
         created_at: タスク登録日時
       user:
         title: タイトル
